# trello-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
docs/: .gitignore  architecture.drawio  commands.md
src/: main.cpp  main.rs
src/control/: command_executor.cpp  command_executor.h  interactive_cli.rs  mod.rs
src/data/: board.h  data_repository.cpp  data_repository.h  data_repository.rs  generic_data_store.h  mod.rs  mongo_data_store.rs  trello_data_store.cpp  trello_data_store.h  trello_data_store.rs
src/service/: board.rs  board_service.cpp  board_service.h  card_service.cpp  card_service.h
