[package]
name = "trello-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde_json  = "1.0"
mongodb = "2.0.0"
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
lazy_static = "1.4.0"
async-trait = "0.1.51"
structopt = "0.3.23"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"